many changes, too busy to do that stuff atm

--- a/GridFS/index.html
+++ b/GridFS/index.html
@@ -2,18 +2,28 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        blah blah blah
-        
-        <script src="" async defer></script>
-    </body>
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="">
+</head>
+
+<body>
+    For sale is a lightly used ASUS NVIDIA Rog STRIX GTX 1080 Ti that was purchased for a mining rig that ran for less than 3 weeks. The card works great and has been
+        tested and is still under manufacturer's warranty.
+        <br>
+        I have 5 other GTX 1080 Ti's for sale that I cannot list due to seller restrictions, check out my
+            craigslist ad <a href="https://phoenix.craigslist.org/cph/sop/d/multiple-nvidia-gtx-geforce/6684415026.html">here</a>
+            and PM me if you have any questions or would like to purchase my other items locally:
+
+    <script src="" async defer></script>
+</body>
+
 </html>
